k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: ${DOCKERHUB_USERNAME}/node-remote-test:latest  # เปลี่ยนเป็นชื่อ image ของคุณ
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80        # เลข port ของ pod
      targetPort: 3000 # เลข port ของ container (Nodejs)
      nodePort: 30010 # เลข port ที่จะให้คนนอกเข้ามาเห็น
